# small-cap-screener

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  LICENSE  PROMPTS.md  README.md  ROADMAP.md  STACK.md  launch.bat  pyproject.toml  requirements-dev.txt  requirements.txt  small_cap_screener.spec
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/: dependencies.py  main.py
api/routers/: companies.py  data_refresh.py  screening.py  signals.py  watchlist.py
api/schemas/: company.py  peers.py  refresh.py  scoring.py  screening.py  signals.py  watchlist.py
data/demo/: seed_universe_fr_small_caps.csv
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DATA_NORMALIZATION.md  DEVELOPMENT.md  KNOWN_LIMITATIONS.md  RELEASE.md  ROADMAP.md  SCORING_DATA_AUDIT.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
src/: demo_dataset.py
src/models/: company.py  company_executive.py  company_holder.py  company_insider_transaction.py  dividend.py  financial_statement.py  kpi_snapshot.py  price_history.py  screening_snapshot.py  split.py  watchlist_entry.py
src/repositories/: company_executive_repository.py  company_holder_repository.py  company_insider_transaction_repository.py  company_repository.py  database.py  dividend_repository.py  euronext_discovery_repository.py  financial_statement_repository.py  kpi_snapshot_repository.py  market_data_repository.py  price_history_repository.py  screening_snapshot_repository.py  (+3 more)
tests/: conftest.py  test_backtesting_service.py  test_chained_provider.py  test_company_charts_service.py  test_company_detail_service.py  test_company_repository.py  test_data_validation_service.py  test_database_configuration.py  test_demo_dataset_service.py  test_dividend_repository.py  test_error_formatter.py  test_euronext_discovery_repository.py  test_financial_data_service.py  test_financial_statement_repository.py  test_kpi_snapshot_repository.py  test_kpi_snapshot_service.py  test_main_window.py  test_maintenance_service.py  test_market_data_repository.py  test_normalization_service.py  test_peer_comparison_service.py  test_price_history_repository.py  test_provider_dtos.py  test_ratio_service.py  test_ratio_service_class.py  test_ratio_service_new_ratios.py  test_scoring_service.py  test_screening_service.py  test_screening_snapshot_repository.py  test_seed_universe_repository.py  test_settings_service.py  test_snapshot_scoring_service.py  test_split_repository.py  test_ticker_ingestion_service.py  test_ticker_resolver_service.py  test_universe_discovery_service.py  test_universe_service.py  test_watchlist_repository.py  test_watchlist_service.py  test_yfinance_provider.py
(+92 files in other folders)
