[project]
name = "small-cap-screener"
version = "0.13.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = true
commit_author = "github-actions <action@github.com>"
commit_message = "chore(release): {version} [skip ci]"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
