[project]
name = "small-cap-screener"
version = "1.0.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = true
commit_author = "github-actions <action@github.com>"
commit_message = "chore(release): {version} [skip ci]"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# FastAPI requires Depends() in function argument defaults — B008 is a false positive there.
"api/routers/*.py" = ["B008"]
"api/dependencies.py" = ["B008"]
# sys.path manipulation must precede project imports in the test conftest.
"tests/api/conftest.py" = ["E402"]
# Optional GUI tests require module-level skip when PySide6 is unavailable.
"tests/test_main_window.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
